added test back and changed packaged name to projecttwo

--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "1-Passport-Example",
+  "name": "projecttwo",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
   "scripts": {
+    "test": "npm run lint",
     "start": "node server.js",
     "lint": "eslint --quiet .",
     "fix": "eslint --fix .",
