--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,4 @@ cache:
   directories:
     - node_modules
 before_install:
-  - mysql -e 'CREATE DATABASE testdb;'
+  - mysql2 -e 'CREATE DATABASE testdb;'
