--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,7 +21,7 @@
     "no-unused-vars": "error",
     "camelcase": "error",
     "indent": ["error", 2],
-    "quotes": ["error", "double"],
+    "quotes": ["error", "single"],
     "semi": ["error", "always"],
     "prettier/prettier": "error"
   }
